fix copyright year

--- a/pilot/templates/base.html
+++ b/pilot/templates/base.html
@@ -27,7 +27,8 @@
 
 <footer class="container">
         <hr />
-    <p>&copy; 2019 James Swineson. <a href="https://github.com/Jamesits/pilot">GitHub</a></p>
+    <p>&copy; <span class="fill-current-year">2020</span> James Swineson. <a href="https://github.com/Jamesits/pilot">GitHub</a>
+    </p>
 </footer>
 
 <script src="{{ url_for('static', filename="lib/jquery/dist/jquery.js") }}"></script>
