add missing files to git again

--- a/pilot/templates/base.html
+++ b/pilot/templates/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{ title }} - Pilot</title>
 
-    <link rel="stylesheet" href="{{ url_for('static', filename="library/bootstrap/dist/css/bootstrap.css") }}"/>
+    <link rel="stylesheet" href="{{ url_for('static', filename="lib/bootstrap/dist/css/bootstrap.css") }}"/>
     <link rel="stylesheet" href="{{ url_for('static', filename="css/site.css") }}"/>
 </head>
 <body>
@@ -31,8 +31,8 @@
     </p>
 </footer>
 
-<script src="{{ url_for('static', filename="library/jquery/dist/jquery.js") }}"></script>
-<script src="{{ url_for('static', filename="library/bootstrap/dist/js/bootstrap.js") }}"></script>
+<script src="{{ url_for('static', filename="lib/jquery/dist/jquery.js") }}"></script>
+<script src="{{ url_for('static', filename="lib/bootstrap/dist/js/bootstrap.js") }}"></script>
 <script src="{{ url_for('static', filename="js/site.js") }}"></script>
 </body>
 </html>
